20070527 version: chrono 0.1