@@ -1,1 +1,2 @@
 20070527 version: chrono 0.1
+20080115 code: updated inst-check.c
